# fancontrol

./: README.markdown  fancontrol.cabal
src/: Main.hs
