name:             fancontrol
version:          1.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

executable fancontrol
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base
